# xadrez_sem_barreiras

./: .gitignore  CapturarTabuleiro.py  Main.py  README.md  Segmentador.py  Tradutor.py  Xadrez.py  pyproject.toml  requirements.txt  run.py
data/: estado_partida.fen
docs/: ALTERACOES.md
src/xadrez_sem_barreiras/: __init__.py  app.py  camera.py  segmentador.py  voz.py  voz_gui.py  xadrez.py
src/xadrez_sem_barreiras.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cenarios_realistas.py  test_e2e.py  test_pipeline_integracao.py  test_segmentador.py  test_tradutor.py  test_web.py  test_xadrez.py
web/: app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
